# agentfiles

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
agents/analyst/: analyst.md
agents/api-architect/: api-architect.md
agents/api-tester/: api-tester.md
agents/code-reviewer/: code-reviewer.md
agents/coder/: coder.md
agents/critic/: critic.md
agents/debugger/: debugger.md
agents/dep-watcher/: dep-watcher.md
agents/devops-agent/: devops-agent.md
agents/doc-writer/: doc-writer.md
agents/documentation-updater/: documentation-updater.md
agents/explorer/: explorer.md
agents/fact-extractor/: fact-extractor.md
agents/fact-verifier/: fact-verifier.md
agents/migration-manager/: migration-manager.md
agents/orchestrator/: orchestrator.md
agents/qa-cycler/: qa-cycler.md
agents/security-auditor/: security-auditor.md
agents/sql-optimizer/: sql-optimizer.md
agents/style-enforcer/: style-enforcer.md
agents/task-decomposer/: task-decomposer.md
agents/test-generator/: test-generator.md
agents/visual-analyzer/: visual-analyzer.md
configs/: opencode.json
plugins/: image-attachment-saver.ts  memory-compact.ts  memory-notepad.ts  memory-project.ts  memory-remember.ts  memory-state.ts  security-damage-control.ts  security-env-guard.ts  security-output-filter.ts  tool-confirm.ts  tool-notify-telegram.ts  tool-questions-telegram.ts
skills/DevOps: Testing Frameworks/: SKILL.md
skills/Docs: MCP Builder/: SKILL.md
skills/OpenCode: Agent Creator/: SKILL.md
skills/OpenCode: Agent Creator/outputs/: output-patterns.md
skills/OpenCode: Agent Creator/references/: agent-templates.md  workflows.md
skills/OpenCode: Agent Registry/: SKILL.md
skills/OpenCode: Documentation/: SKILL.md
skills/OpenCode: Documentation/references/: glossary.md
skills/OpenCode: Plugin Creator/: QUICK_REFERENCE.md  SKILL.md  SKILL_SUMMARY.md
skills/OpenCode: Plugin Creator/references/: examples.md  lifecycle.md  plugin-architecture.md  sdk-api.md
skills/OpenCode: Plugin Creator/scripts/: scaffold.sh  scaffold.ts
skills/OpenCode: Plugin Creator/scripts/plugin-template/: README.md  package.json  plugin.js  plugin.ts
skills/OpenCode: Skill Creator/: SKILL.md
skills/Python: Code Reviewer/: SKILL.md
skills/Python: Code Stylist/: SKILL.md
skills/Python: Lint Fixer/: SKILL.md
skills/Security: OWASP Top 10/: SKILL.md
skills/Security: Severity Classification/: SKILL.md
skills/agentfiles/: SKILL.md
skills/agentfiles/references/: architecture.md  commands.md
skills/code-dry-principle/: SKILL.md
skills/code-dry-principle/references/: overview.md
skills/code-dry-principle/references/python/: anti-patterns.md  examples.md  real-world.md
skills/code-grasp-patterns/: SKILL.md
skills/code-grasp-patterns/references/python/controller/: anti-patterns.md  examples.md
skills/code-grasp-patterns/references/python/creator/: anti-patterns.md  examples.md
skills/code-grasp-patterns/references/python/high-cohesion/: anti-patterns.md  examples.md
skills/code-kiss-principle/: SKILL.md
skills/code-kiss-principle/references/python/: anti-patterns.md  examples.md  real-world.md
skills/code-solid-principles/: SKILL.md
skills/code-tdd-principle/: SKILL.md
skills/code-tdd-principle/references/python/: anti-patterns.md  examples.md  real-world.md
skills/code-yagni-principle/: SKILL.md
skills/code-yagni-principle/references/python/: anti-patterns.md  examples.md  real-world.md
src/agentfiles/: __init__.py  __main__.py  cli.py  cli_format.py  completion.py  config.py  differ.py  doctor.py  engine.py  frontmatter.py  git.py  interactive.py  models.py  output.py  paths.py  scanner.py  source.py  target.py  tokens.py
src/syncode/: __init__.py  __main__.py  checksum.py  cli.py  cli_completion.py  cli_format.py  config.py  differ.py  doctor.py  engine.py  frontmatter.py  git.py  interactive.py  models.py  output.py  paths.py  scanner.py  source.py  target.py  tokens.py
tests/: conftest.py  test_adopt.py  test_branch.py  test_clean.py  test_cli_flags.py  test_completion.py  test_config.py  test_conflicts.py  test_create_pr.py  test_cursor.py  test_diff.py  test_differ.py  test_doctor.py  test_engine.py  test_format_json.py  test_frontmatter.py  test_git.py  test_init.py  test_interactive.py  test_models.py  test_new_platforms.py  test_output.py  test_paths.py  test_platform_groups.py  test_pull.py  test_push.py  test_scanner.py  test_selective.py  test_shallow_clone.py  test_show.py  test_source.py  test_sync.py  test_sync_state.py  test_target.py  test_token_estimate.py  test_tokens.py  test_update.py  test_verify.py  test_windsurf.py  test_workflow.py
(+27 files in other folders)
