[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfiles"
version = "0.5.1"
description = "Sync AI tool configurations (agents, skills, commands, plugins) for OpenCode"
keywords = ["opencode", "ai", "cli", "config", "sync", "agents", "skills", "plugins"]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "SvetlovTech", email = "svetlovtech@aabee.tech"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/svetlovtech/agentfiles"
Repository = "https://github.com/svetlovtech/agentfiles"
Issues = "https://github.com/svetlovtech/agentfiles/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "bandit[toml]>=1.7",
    "commitizen",
]

[project.scripts]
agentfiles = "agentfiles.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentfiles = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: Fast isolated tests (no filesystem, no subprocess)",
    "integration: Tests with filesystem/git/platform setup",
    "slow: Tests that take > 1 second",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/agentfiles/completion.py" = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105", "B404", "B603", "B607"]  # B101: assert for type narrowing; B105: false positive on empty string; B404/B603/B607: CLI tool wrapping git/gh

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
